@@ -20,13 +20,13 @@
         <maven-jar-plugin.version>3.0.2</maven-jar-plugin.version>
 
         <!-- java props -->
-        <java.source.level>1.9</java.source.level>
+        <java.source.level>9</java.source.level>
 
         <!-- lib versions -->
         <slf4j.version>1.7.25</slf4j.version>
         <logback.version>1.2.3</logback.version>
-        <junit.version>5.1.0</junit.version>
-        <maven-surefire-plugin.version>2.20.1</maven-surefire-plugin.version>
+        <junit.version>4.12</junit.version>
+        <maven-surefire-plugin.version>2.21.0</maven-surefire-plugin.version>
         <guava.version>24.0-jre</guava.version>
         <grpc-protobuf.version>1.10.0</grpc-protobuf.version>
         <javax.version>1.3.2</javax.version>
@@ -72,18 +72,10 @@
                 <version>${guava.version}</version>
             </dependency>
 
-
             <dependency>
-                <groupId>org.junit.jupiter</groupId>
-                <artifactId>junit-jupiter-engine</artifactId>
+                <groupId>junit</groupId>
+                <artifactId>junit</artifactId>
                 <version>${junit.version}</version>
-                <scope>test</scope>
-            </dependency>
-            <dependency>
-                <groupId>org.junit.jupiter</groupId>
-                <artifactId>junit-jupiter-params</artifactId>
-                <version>${junit.version}</version>
-                <scope>test</scope>
             </dependency>
 
         </dependencies>
@@ -100,6 +92,11 @@
                     <target>${java.source.level}</target>
                     <showDeprecation>true</showDeprecation>
                     <showWarnings>true</showWarnings>
+                    <fork>true</fork>
+                    <compilerArgs>
+                        <arg>--add-modules</arg>
+                        <arg>java.xml.ws.annotation</arg>
+                    </compilerArgs>
                 </configuration>
             </plugin>
             <plugin>
